feat: 实现物品池与候选标签系统，主题模板支持抽样刷新
- 引入系统池 (pool/*) 和候选标签 (candidate/biome/*, candidate/theme/*) 分层
- 主题模板 sell/buy_items 支持 pick 抽样语法
- 主题价格修正改为精确物品优先、标签按声明顺序首条命中（不叠加）
- 周期刷新时从主题候选重新抽样，重建当期买卖清单
- 更新所有主题 JSON 及 Java 代码适配新系统
- 删除已实现的群系物品池待办文档